# seq-events

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  event.rs  fasta.rs  fastq.rs  lib.rs
tests/: download_test_data.sh  integration_test.rs
